Testing/testing46_(void_data_type).cpp
#include<bits/stdc++.h>
using namespace std;
int main()
{
    void x;     //error
}
